--- a/Android Application/app/src/main/res/layout/activity_ready.xml
+++ b/Android Application/app/src/main/res/layout/activity_ready.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="com.nullsky.fba.ReadyActivity">
+
+    <TextView
+        android:layout_marginBottom="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:text="Thanks for subscribtion"
+        android:textAlignment="center"
+        android:textColor="@color/textColorWelcome"
+        android:textSize="22sp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You are ready!"/>
-</android.support.constraint.ConstraintLayout>
+        android:fontFamily="casual"
+        android:text="Here is a list of the data collected about you..."
+        android:textAlignment="center"
+        android:textColor="@color/textColorWelcome"
+        android:textSize="22sp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="140dp" />
+    <ListView
+        android:id="@+id/lsvData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+</LinearLayout>
